--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 
 <!-- saved from url=(0025)http://uaio.ru/vil/46.htm -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
-<link rel="stylesheet" type="text/css" href="./Ленин ПСС издание 5 том 46_files/SovietBookFont.css">
-<meta http-equiv="Content-Language" content="ru">
-<link rel="stylesheet" type="text/css" href="./Ленин ПСС издание 5 том 46_files/vil55.css">
+<link rel="stylesheet" type="text/css" href="files/SovietBookFont.css">
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="files/vil55.css">
 <title>Ленин ПСС издание 5 том 46</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 <br><a href="http://uaio.ru/vil/46.htm#psoder">СОДЕРЖАНИЕ тома 46</a>
 </p><p></p><div class="page">
 <table width="100%">
-<tbody><tr><td width="50%"><img src="./Ленин ПСС издание 5 том 46_files/obl2.jpg"></td>
+<tbody><tr><td width="50%"><img src="files/obl2.jpg"></td>
 <td width="50%" valign="TOP">
 <p align="CENTER"><i><span style="COLOR: RED">Пролетарии всех стран, соединяйтесь</span></i>
 <br><br><br>
@@ -50,7 +50,7 @@
 </p><p align="JUSTIFY">Л Подписное
 <br>079(02) - 75
 
-</p><p></p></div><div class="page"><a name="svii"> </a><a>
+</p><p></p></div><div class="page"><a name="svii"> </a>
 <p align="CENTER">VII
 </p><h2 align="CENTER">ПРЕДИСЛОВИЕ</h2>
 <p align="JUSTIFY">Сорок шестым томом Полного собрания сочинений В. И. Ленина открывается серия томов, включающих письма, телеграммы, записки с 1893 по 1923 год.
@@ -8232,7 +8232,7 @@ Cross Road London W. С. Я видел его на днях и он, кажется, согласен со мной, что
 <small></small></p><p></p><hr width="15%" align="LEFT"><small>
 </small><p align="JUSTIFY"><small>* Это старо! - вопите вы. Да, Все партии, имеющие хорошую популярную литературу, распространяют <span class="rzr">старье:</span> Геда и Лафарга, Бебеля, Бракке, Либкнехта и пр. <span class="rzr">по десятилетиям.</span> Слышите ли:
 по десятилетиям! И популярная литература только та и хороша, только та и годится, которая служит десятилетия.
-Ибо популярная литература есть ряд учебников для народа, а учебники излагают азы, не меняющиеся <span class="rzr">по полустолетиям.</span> 
+Ибо популярная литература есть ряд учебников для народа, а учебники излагают азы, не меняющиеся <span class="rzr">по полустолетиям.</span>
 Та «популярная» литература, которая вас «пленяет» и которую «Свобода» и с.-р. издают пудами ежемесячно,
 есть макулатура и шарлатанство. Шарлатаны всегда суетливые и шумят больше, а некоторые наивные люди принимают это за энергию.
 </small>
