--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html><head>
-<link rel="stylesheet" type="text/css" href="files/SovietBookFont.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="files/SovietBookFont.css">
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="files/vil55.css">
 <title>Ленин ПСС издание 5 том 46</title>
